--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 
 </head>
 <body>
-    <script src="js-styles.js"></script>
-
     
+    <body>
+        <div style="margin-bottom: 20px">
+          <input type="button" value="rock"></input>
+          <input type="button" value="paper"></input>
+          <input type="button" value="scissors"></input>
+        </div>
+        <div id="result"></div>
+        
+<script src="js-styles.js"></script>
 </body>
 </html>
